<resources>
    <string name="app_name">Képzőművészetc webshop</string>
    <string name="registration">Regisztráció</string>
    <string name="address_email_com">address@email.com</string>
    <string name="apply">Ok</string>
    <string name="cancel">Mégse</string>
    <string name="login">Bejelentkezés</string>
    <string name="password">Jelszó</string>
    <string name="password_again">Jelszó újra</string>
    <string name="main_page">Főoldal</string>
    <string name="shop">Bolt</string>
    <string name="register">Regisztráció</string>
    <string name="logout">Kijelentkezés</string>
    <string name="item_name">Név</string>
    <string name="item_amount">Mennyiség</string>
    <string name="item_price">Ár</string>
    <string name="item_descritpion">Leírás</string>
    <string name="add">Hozzáad</string>
    <string name="add_item">Hozzáad</string>
    <string name="buy">Vásárlás</string>
    <string name="keszlet">Készlet</string>
    <string name="hozzaad">Hozzáad</string>
</resources>