<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/mainTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_page"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:id="@+id/mainShopButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:onClick="onShopButton"
        android:text="@string/shop" />
    <Button
        android:id="@+id/mainLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:onClick="onLoginButton"
        android:text="@string/login" />

    <Button
        android:id="@+id/mainRegisterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:onClick="onRegisterButton"
        android:text="@string/register" />

    <Button
        android:id="@+id/mainLogoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="168dp"
        android:onClick="onLogoutButton"
        android:text="@string/logout" />
</LinearLayout>