<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_height="match_parent"
         android:layout_width="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/shopItemNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/shopItemPriceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_price"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/shopItemAmountTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_amount"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:id="@+id/shopItemDescriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_descritpion"
            android:textAlignment="center"
            android:textSize="20sp"
            android:lines="5"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            />
        <Button
            android:id="@+id/shopCartButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="100dp"
            android:onClick="onCartButton"
            android:text="@string/shop" />

    </LinearLayout>

</androidx.cardview.widget.CardView>